// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToListModal multiple works as input 1`] = `
<div
  className="modal-container "
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window add-to-list--modal p-4"
  >
    <div
      className="top d-flex flex-row justify-content-start justify-content-sm-end"
      style={
        Object {
          "borderBottom": "1px solid var(--pistache)",
        }
      }
    >
      <i
        className="material-icons material-icons-clear m-3 d-none d-sm-inline-block"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        clear
      </i>
      <button
        className="m-3 d-inline-block d-sm-none
            btn Button Button__medium Button__link2 "
        data-cy=""
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-chevron_left align-middle"
        >
          chevron_left
        </i>
        <span
          className="align-middle"
        >
          Tilbage
        </span>
      </button>
    </div>
    <div
      className="content p-4"
    >
      <p
        className=" Text Text__large "
      >
        GEM I LISTE
      </p>
      <div
        className="row"
      >
        <strong
          className="col-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <hr />
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center d-none"
                onClick={[Function]}
                type="button"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-6"
        >
          <p
            className="mt2"
          >
            Du er ved at gemme 2 bøger
          </p>
        </div>
      </div>
      <div
        className="bottom d-flex flex-row justify-content-end mb-5 mt-5"
      >
        <a
          href={null}
          target="_blank"
        >
          <button
            className="mr-4 false
                btn Button Button__large Button__quaternary "
            data-cy="modal-done-btn"
            disabled={false}
            onClick={[Function]}
          >
            JA TAK, GEM NU
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddToListModal newly added list is selected 1`] = `
<div
  className="modal-container "
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window add-to-list--modal p-4"
  >
    <div
      className="top d-flex flex-row justify-content-start justify-content-sm-end"
      style={
        Object {
          "borderBottom": "1px solid var(--pistache)",
        }
      }
    >
      <i
        className="material-icons material-icons-clear m-3 d-none d-sm-inline-block"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        clear
      </i>
      <button
        className="m-3 d-inline-block d-sm-none
            btn Button Button__medium Button__link2 "
        data-cy=""
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-chevron_left align-middle"
        >
          chevron_left
        </i>
        <span
          className="align-middle"
        >
          Tilbage
        </span>
      </button>
    </div>
    <div
      className="content p-4"
    >
      <p
        className=" Text Text__large "
      >
        GEM I LISTE
      </p>
      <div
        className="row"
      >
        <strong
          className="col-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
            <hr />
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center d-none"
                onClick={[Function]}
                type="button"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-6"
        >
          <WorkItemSmall
            work={
              Object {
                "book": Object {
                  "creator": "some creator1",
                  "pid": "pid1",
                  "taxonomy_description": "some taxonomy_description1",
                  "title": "some title1",
                },
                "description": "some description1",
                "links": Object {
                  "cover": "/cover1",
                },
              }
            }
          />
          <textarea
            className="comment"
            onChange={[Function]}
            placeholder="Skriv evt. en kommentar til bogen"
            value=""
          />
        </div>
      </div>
      <div
        className="bottom d-flex flex-row justify-content-end mb-5 mt-5"
      >
        <a
          href={null}
          target="_blank"
        >
          <button
            className="mr-4 false
                btn Button Button__large Button__quaternary "
            data-cy="modal-done-btn"
            disabled={false}
            onClick={[Function]}
          >
            JA TAK, GEM NU
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddToListModal renders lists from store, first is selected 1`] = `
<div
  className="modal-container "
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window add-to-list--modal p-4"
  >
    <div
      className="top d-flex flex-row justify-content-start justify-content-sm-end"
      style={
        Object {
          "borderBottom": "1px solid var(--pistache)",
        }
      }
    >
      <i
        className="material-icons material-icons-clear m-3 d-none d-sm-inline-block"
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        clear
      </i>
      <button
        className="m-3 d-inline-block d-sm-none
            btn Button Button__medium Button__link2 "
        data-cy=""
        disabled={false}
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-chevron_left align-middle"
        >
          chevron_left
        </i>
        <span
          className="align-middle"
        >
          Tilbage
        </span>
      </button>
    </div>
    <div
      className="content p-4"
    >
      <p
        className=" Text Text__large "
      >
        GEM I LISTE
      </p>
      <div
        className="row"
      >
        <strong
          className="col-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <hr />
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center d-none"
                onClick={[Function]}
                type="button"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-6"
        >
          <WorkItemSmall
            work={
              Object {
                "book": Object {
                  "creator": "some creator1",
                  "pid": "pid1",
                  "taxonomy_description": "some taxonomy_description1",
                  "title": "some title1",
                },
                "description": "some description1",
                "links": Object {
                  "cover": "/cover1",
                },
              }
            }
          />
          <textarea
            className="comment"
            onChange={[Function]}
            placeholder="Skriv evt. en kommentar til bogen"
            value=""
          />
        </div>
      </div>
      <div
        className="bottom d-flex flex-row justify-content-end mb-5 mt-5"
      >
        <a
          href={null}
          target="_blank"
        >
          <button
            className="mr-4 false
                btn Button Button__large Button__quaternary "
            data-cy="modal-done-btn"
            disabled={false}
            onClick={[Function]}
          >
            JA TAK, GEM NU
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;
